# Apostasy-Engine

./: .gitignore  Cargo.toml  README.md  Scene  awdf.scene  material3.material  test  to-do.md  validation.txt  validation.txt#
apostasy/: Cargo.toml
apostasy/apostasy-macros/: Cargo.toml
apostasy/apostasy-macros/src/: lib.rs
apostasy/macros/: Cargo.toml
apostasy/macros/src/: lib.rs
apostasy/res/shaders/: frag.spv  shader.frag  shader.vert  vert.spv  voxel_vert.spv
apostasy/src/: lib.rs
apostasy/src/engine/: mod.rs  timer.rs
apostasy/src/engine/assets/: asset.rs  handle.rs  mod.rs  server.rs
apostasy/src/engine/ecs/: archetype.rs  command.rs  component.rs  core.rs  entity.rs  mod.rs  query.rs  resource.rs  system.rs
apostasy/src/engine/editor/: asset_editor.rs  console_commands.rs  engine_settings_ui.rs  file_manager.rs  hierarchy.rs  input_manager_ui.rs  inspectable.rs  inspector.rs  mod.rs  renderer_settings.rs  scene_manager_ui.rs  style.rs  terrain_editor.rs
apostasy/src/engine/nodes/: camera.rs  component.rs  mod.rs  scene.rs  scene_serialization.rs  system.rs  transform.rs  velocity.rs  world.rs
apostasy/src/engine/physics/: collider.rs  constants.rs  gravity.rs  ground.rs  mod.rs  physics_body.rs  raycast.rs  velocity.rs
apostasy/src/engine/rendering/: debug_renderer.rs  mod.rs  model.rs  physical_device.rs  pipeline_settings.rs  profiler.rs  queue_families.rs  render_context.rs  render_engine.rs  render_manager.rs  renderer.rs  rendering_context.rs  surface.rs  swapchain.rs  vertex.rs
apostasy/src/engine/voxels/: chunk_loader.rs  mod.rs  voxel_chunk.rs  voxel_components.rs  voxel_properties.rs  voxel_registry.rs
apostasy/src/engine/windowing/: cursor_manager.rs  input_manager.rs  mod.rs
apostasy/src/utils/: mod.rs  screen_to_world.rs  slotmap.rs
core/: Cargo.toml
core/res/biomes/: dirty.yaml  forest.yaml  mountains.biome.yaml  mountains.yaml  plains.yaml  taiga.biome.yaml
core/res/items/: dirt.yaml  frosted_dirt.yaml
core/res/shaders/: shader.vert  shader.vert.spv  voxel.frag  voxel.frag.spv  voxel.vert  voxel.vert.spv
core/res/voxels/: dirt.yaml  grass.yaml  grassy.yaml  stone.yaml  wood.yaml
core/src/: lib.rs
core/src/assets/: asset_manager.rs  gltf.rs  loader.rs  mod.rs  shader_loader.rs
core/src/assets/loaders/: biome_loader.rs  item_loader.rs  mod.rs  voxel_loader.rs
core/src/items/: container.rs  mod.rs  voxel_component.rs
core/src/objects/: component.rs  mod.rs  resource.rs  scene.rs  world.rs
core/src/physics/: collider.rs  collision_system.rs  mod.rs  velocity.rs
core/src/rendering/: mod.rs
core/src/ui/: debug_ui.rs  mod.rs
core/src/utils/: logging.rs
core/src/voxels/: biome.rs  chunk.rs  chunk_loader.rs  meshes.rs  mod.rs  texture_atlas.rs  voxel.rs  voxel_raycast.rs
(+236 files in other folders)
