[package]
name = "vulkan-attempt-3"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
anyhow = "1.0.100"
bytemuck = { version = "1.19.0", features = ["derive"]}
nalgebra = "0.33.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = "0.30.5"

[profile.dev]
opt-level = 1
