[package]
name = "apostasy"
version.workspace = true
edition.workspace = true

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace]
members = [".", "macros"]

[dependencies]
linkme = "0.3.32"
parking_lot = "0.12.5"
downcast-rs = "2.0.2"
derive_more = { version  = "2.0.1", features = ["deref", "deref_mut", "from"] }
smallvec = "1.15.0"
aligned-vec = "0.6.4"
apostasy-macros = { path = "macros" }
thread_local = "1.1.9"


