[package]
name = "apostasy"
version = "0.1.0"
edition = "2021"

[dependencies]
linkme = "0.3.32"
parking_lot = "0.12.5"
downcast-rs = "2.0.2"
derive_more = { version  = "2.0.1", features = ["deref", "deref_mut", "from"] }
smallvec = "1.15.0"
aligned-vec = "0.6.4"
apostasy-macros = { path = "macros" }


[lib]
name = "apostasy"
path = "src/lib.rs"
