[package]
name = "apostasy"
version.workspace = true
edition.workspace = true

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace]
members = ["apostasy-macros"]

[workspace.dependencies]
apostasy-macros = {path = "apostasy-macros"}

[dependencies]
anyhow ="1.0.100"
ash = "0.38.0"
ash-window = "0.13.0"
aligned-vec = "0.6.4"
apostasy-macros.workspace = true
bytemuck = {version = "1.19.0", features = ["derive"]}
cgmath = "0.18.0"
derive_more = { version  = "2.0.1", features = ["deref", "deref_mut", "from"] }
inventory = "0.3"
linkme = "0.3.35"
parking_lot = "0.12.5"
smallvec = "1.15.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thread_local = "1.1.8"
winit = "0.30.5"
