[package]
name = "apostasy-core"
version = "0.1.0"
edition = "2024"

[dependencies]

ash = "0.38.0"
ash-window = "0.13.0"
anyhow = "1.0.100"
bytemuck = { version = "1.19.0", features = ["derive"]}
cgmath = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = "0.30.5"
parking_lot = "0.12.5"
gl = "0.14.0"
gltf = "1.4.1"
inventory = "0.3.24"
apostasy-macros = {path = "../macros/"}
hashbrown = "0.17.0"
